# satysfi-aosagi

./: .gitignore  README.md  Satyristes  flake.nix  satysfi-aosagi-doc.opam  satysfi-aosagi.opam  treefmt.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
doc/: manual.saty
src/: aosagi.satyh
